--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,8 @@
     <title>{{ title }}</title>
   </head>
   <body>
-    
+    {% block content %}
+    {% endblock %}
     <a href="/">Home</a>
   </body>
 </html>
