--- a/templates/list_stories.html
+++ b/templates/list_stories.html
@@ -6,7 +6,7 @@
 <h3>{{ story.title }}</h3>
 <p>
 {{ story.last_sentence }} <br/>
-<a href="/contribute/{{ story.id }}">Add to this story</a>
+<a href="/read/{{ story.id }}">Go to this story</a>
 </p>
 {% endfor %}
 {% endblock %}
