--- a/templates/create_story.html
+++ b/templates/create_story.html
@@ -1,29 +1,31 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Login</h1>
+<h1>Create story</h1>
 {% for msg in get_flashed_messages() %}
 <span style="color: red;">{{ msg }}</span> <br/>
 {% endfor %}
-<form action="/login" method="post">
+<form action="/create" method="post">
   <table>
     <tr>
       <td>
-        Username:
+        Title: 
       </td>
       <td>
-        <input type="text" name="uname" placeholder="Username" autofocus="true"/> <br/>
+        <input type="text" name="title" />
       </td>
     </tr>
     <tr>
       <td>
-        Password:
-      </td> 
+        Initial portion: 
+      </td>
       <td>
-        <input type="password" name="pword" placeholder="Password"/> <br/>
+        <textarea name="body" rows="8" cols="40"></textarea>
       </td>
     </tr>
   </table>
-  <input type="submit" value="Login" />
+  <input type="submit" value="Create Story">
 </form>
 {% endblock %}
+
+
