--- a/templates/create_story.html
+++ b/templates/create_story.html
@@ -12,7 +12,7 @@
         Title: 
       </td>
       <td>
-        <input type="text" name="title" />
+        <input type="text" name="title" placeholder="Title"/>
       </td>
     </tr>
     <tr>
@@ -20,11 +20,16 @@
         Initial portion: 
       </td>
       <td>
-        <textarea name="body" rows="8" cols="40"></textarea>
+        <textarea name="body" rows="8" cols="40" placeholder="Once upon a time..."></textarea>
+      </td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>
+        <input type="submit" value="Create Story">
       </td>
     </tr>
   </table>
-  <input type="submit" value="Create Story">
 </form>
 {% endblock %}
 
