title blocks added

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,8 @@
 <html>
   <head>
-    <title>{{ title }} | Storyvesant</title>
+    <title>{% block title %}
+      Home
+    {% endblock %} | Storyvesant</title>
   </head>
   <body>
     <b>Storyvesant</b> | 
