--- a/templates/list_stories.html
+++ b/templates/list_stories.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+All Stories
+{% endblock %}
+
 {% block content %}
 <h1>List of Stories</h1>
 {% for story in stories %}
