--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+Login
+{% endblock %}
+
 {% block content %}
 <h1>Login</h1>
 {% for msg in get_flashed_messages() %}
