--- a/templates/create_story.html
+++ b/templates/create_story.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+Create Story
+{% endblock %}
+
 {% block content %}
 <h1>Create story</h1>
 {% for msg in get_flashed_messages() %}
