--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+Home
+{% endblock %}
+
 {% block content %}
   <h1>Storyvesant</h1>
   This is a collaborative storytelling website. <br/>
