--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+Profile
+{% endblock %}
+
 {% block content %}
 <h1>{{ session["user"] }}</h1>
 {% endblock %}
