--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+Register
+{% endblock %}
+
 {% block content %}
 <h1>Register</h1>
 {% for msg in get_flashed_messages() %}
