--- a/templates/view_story.html
+++ b/templates/view_story.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+View Story
+{% endblock %}
+
 {% block content %}
 <h1>{{ story.title }}</h1>
 <p>{{ story.body }}</p>
