--- a/templates/edit_story.html
+++ b/templates/edit_story.html
@@ -6,7 +6,7 @@ Contribute
 
 {% block content %}
 <h1>{{ story.title }}</h1>
-<p>{{ story.body }}</p>
+<p>{{ story.last_sentence }}</p>
 <form action="/edit/{{ story.id }}" method="post">
   <p>
   Next sentence: <br />
