--- a/templates/create_story.html
+++ b/templates/create_story.html
@@ -16,7 +16,7 @@ Create Story
         Title: 
       </td>
       <td>
-        <input type="text" name="title" placeholder="Title"/>
+        <input type="text" name="title" placeholder="Title" autofocus="true"/>
       </td>
     </tr>
     <tr>
