--- a/templates/edit_story.html
+++ b/templates/edit_story.html
@@ -17,7 +17,7 @@ Contribute
   {% for msg in get_flashed_messages() %}
   <span style="color: red;">{{ msg }}</span> <br/>
   {% endfor %}
-  <textarea name="next_sentence" rows="8" cols="40" placeholder="And then stuff happened..."></textarea> <br />
+  <textarea name="next_sentence" rows="8" cols="40" placeholder="And then stuff happened..." autofocus="true"></textarea> <br />
   <input type="submit" />
   </p>
 </form>
